# remarkdown

./: .env.example  README.md  pyproject.toml  run.py
mail_to_obsidian/: __init__.py  cli.py  config.py  imap_client.py  markdown.py
scripts/: legacy_gmx_email_retrieval.py
